test/fail/let-else-definedness.mo
let x = 4 else { ignore x; loop () }
